--- a/client/views/database_explorer.html
+++ b/client/views/database_explorer.html
@@ -27,7 +27,7 @@
 	<div class="span3">
 		<h4 class="page-header explorer_header">Databases:</h4>
 		<div class="input-append explorer_search pull-left">
-		  <input id="db_search" type="text" placeholder="database_name" class="input-medium">
+		  <input id="db_search" type="text" placeholder="database_name" class="input-large">
 		  <button id="db_query" class="btn btn-inverse" type="button">Search</button>
 		</div>
 		<div class="pull-left">
@@ -43,7 +43,7 @@
 	<div class="span3">
 		<h4 class="page-header explorer_header">Tables:</h4>
 		<div class="input-append explorer_search pull-left">
-		  <input id="table_search" type="text" placeholder="table_name" class="input-medium">
+		  <input id="table_search" type="text" placeholder="table_name" class="input-large">
 		  <button id="table_query" class="btn btn-inverse" type="button">Search</button>
 		</div>
 		<div class="pull-left">
