Whole bunch of changes

--- a/client/views/create_metric.html
+++ b/client/views/create_metric.html
@@ -67,6 +67,12 @@
 						</div>
 					</div>
 				</div>
+				<div class="control-group">
+					<label class="control-label" for="prep_sql"></label>
+					<div class="controls">
+						<button class="btn btn-inverse" id="reset_create">Reset Form</button>
+					</div>
+				</div>		
 			</form>
 		</div>
 		<div class="span6 pull-right" id="create_preview">
