--- a/client/views/settings.html
+++ b/client/views/settings.html
@@ -1,5 +1,44 @@
 <template name="settings">
-	<div id="join_org_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="join_org" aria-hidden="true">
+	  <div id="join_org_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="join_org" aria-hidden="true">
+		<div class="modal-header">
+		    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+		    <h3 id="join_org">Select an organization to join</h3>
+		  </div>
+		  <div class="modal-body" id="join_org_modal_body">
+			<form>	
+			{{#isolate}}				
+			<label>Organization Name:</label>
+			<select id="select_org">
+				<option value="none">None</option>
+				{{#each orgs}}
+					<option value="{{organization_name}}">{{organization_name}}</option>
+				{{/each}}
+			</select>
+			{{#if selected_org}}
+			<label>Group Name:</label>
+			<select id="select_group">
+				<option value="none">None</option>
+				{{#each groups}}
+					<option value="{{group_name}}">{{group_name}}</option>
+				{{/each}}
+			</select>
+			<label>Role Type:</label>
+			<select id="role_type" >
+				<option value="analyst">Analyst</option>
+				<option value="admin">Admin</option>
+			</select>
+			<div class="form-actions">
+			<button class="btn btn-inverse" id="submit_org_request">Submit Access Request</button>		
+			</div>
+			{{/if}}	
+			</form>
+			{{/isolate}}
+		  </div>
+		  <div class="modal-footer">
+		    <button class="btn btn-inverse" data-dismiss="modal" aria-hidden="true">Exit</button>
+		  </div>
+		</div>
+	<div id="join_org_modal2" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="join_org" aria-hidden="true">
 	  <div class="modal-header">
 	    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
 	    <h3 id="join_org">Select an organization to join</h3>
@@ -22,16 +61,40 @@
 	    <button class="btn btn-inverse" data-dismiss="modal" aria-hidden="true">Exit</button>
 	  </div>
 	</div>
+	<div id="join_group_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="join_group" aria-hidden="true">
+	  <div class="modal-header">
+	    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+	    <h3 id="join_org">Select a group to join</h3>
+	  </div>
+	  <div class="modal-body" id="join_group_modal_body">
+		<form>	
+		<label>Group Name:</label>	
+		<select id="select_group">
+			<option value="none">None</option>
+			{{#each groups}}
+				<option value="{{group_name}}">{{group_name}}</option>
+			{{/each}}
+		</select>
+		</form>
+		<div class="form-actions">
+		<button class="btn btn-inverse" id="submit_group_request">Submit Access Request</button>		
+		</div>
+	  </div>
+	  <div class="modal-footer">
+	    <button class="btn btn-inverse" data-dismiss="modal" aria-hidden="true">Exit</button>
+	  </div>
+	</div>
 	<div class="span4 offset1">
 	{{#isolate}}
+	<div id="settings-errors">
+	</div>	
 	<form>
 		<fieldset>
-			<legend>Settings {{#isolate}}<button class="btn btn-primary pull-right" id="settings_save">Settings Saved.</button>{{/isolate}}</legend>
-			
+			<legend>Settings {{#isolate}}<button class="btn btn-inverse pull-right" id="settings_save">Settings Saved.</button>{{/isolate}}</legend>
 			<label>Name:</label>
-			<input class="acct_setting" type="text" id="name">
+			<input class="acct_setting" type="text" id="setting_user_name">
 			<label>Email:</label>
-			<input class="acct_setting" type="text" id="email">
+			<input class="acct_setting" type="text" id="setting_user_email">
 			{{#isolate}}
 			<label>Syntax:</label>
 			<select class="acct_setting" id="syntax-type">
@@ -42,8 +105,46 @@
 		</fieldset>
 	</form>
 	{{/isolate}}
+	{{#isolate}}
+	{{#if num_orgs}}
+		{{#if org_access}}
+			{{#each org_access}}
+			<div>
+			<p>Organization: {{organization_name}}</p>
+			{{#if group_access}}
+				{{#each group_access}}
+				<p>Group Name: {{group_name}}</p>
+				{{/each}}
+			{{else}}
+				{{#if group_pending}}
+					{{#each group_pending}}
+					<p><strong>Pending access request for group: {{group_name}}</strong></p>
+					{{/each}}
+				{{else}}		
+					<div class="btn-group pull-left">
+						<button class="btn btn-inverse" id="launch_join_group">Join a group</button>
+					</div>
+				{{/if}}
+			{{/if}}	
+			</div>
+			{{/each}}	
+		{{else}}
+			{{#each org_pending}}
+			<p><strong>Pending access request for: {{organization_name}}</strong></p>
+			{{/each}}
+		{{/if}}			
+	{{else}}
 	<div class="btn-group pull-left">
 		<button class="btn btn-inverse" id="launch_join_org">Join an organization</button>
-	</div>	
+	</div>
+	{{/if}}
+	{{/isolate}}	
 	</div>
 </template>
+
+<template name="join_org_error">
+	<div class="alert alert-error">
+	  	<button type="button" class="close" data-dismiss="alert">&times;</button>
+	  	<strong>Please update your name and email first</strong>
+	</div>
+</template>	
